add band members

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
             <img src="https://cdn.britannica.com/41/197341-050-4859B808/The-Rolling-Stones-Bill-Wyman-Keith-Richards-1964.jpg" alt="" width="50%">
         <p>The Rolling Stones are an English rock band formed in London in 1962. Diverging from the popular pop rock of the early-1960s, the Rolling Stones pioneered the gritty, heavier-driven sound that came to define hard rock.
             Their first stable line-up was vocalist Mick Jagger, multi-instrumentalist Brian Jones, guitarist Keith Richards, drummer Charlie Watts, and bassist Bill Wyman. Initially the band performed mostly covers of American blues and R&B songs, and during their formative years Brian Jones was the primary leader: he put the band together, named it, and drove the sound and look of the band. After Andrew Loog Oldham became the group's manager in 1963, he encouraged them to write their own songs. Jagger and Richards became the primary creative force behind the band, alienating Jones, who developed a drug addiction that interfered with his ability to meaningfully contribute. He left the band shortly before his death in 1969, having been replaced by guitarist Mick Taylor, who in turn left in 1974 to be replaced by Ronnie Wood. Since Wyman's departure in 1993, Darryl Jones has served as bassist</p>
+            <h2>Band Members</h2>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Mick_Jagger_Deauville_2014.jpg/220px-Mick_Jagger_Deauville_2014.jpg">
+            <h4>Mick jagger</h4>
+
         </div>
     </body>
 </html>
