--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Mick_Jagger_Deauville_2014.jpg/220px-Mick_Jagger_Deauville_2014.jpg">
             <h4>Mick jagger</h4>
             <p>Sir Michael Philip Jagger (born 26 July 1943) is an English singer, songwriter, actor, and film producer who has gained worldwide fame as the lead singer and one of the founder members of the Rolling Stones. Jagger's career has spanned over six decades, and he has been described as "one of the most popular and influential frontmen in the history of rock & roll". His distinctive voice and energetic live performances, along with Keith Richards' guitar style, have been the trademark of the Rolling Stones throughout the band's career. Jagger gained press notoriety for his romantic involvements and was often portrayed as a countercultural figure.</p>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Keith_Richards_Photo_Jerzy_Bednarski.jpg/220px-Keith_Richards_Photo_Jerzy_Bednarski.jpg"
+            <h4>Keith Richards</h4>
+            <p>Keith Richards (born 18 December 1943),[1] often referred to during the 1960s and 1970s as Keith Richard, is an English musician, singer, and songwriter. He is best known as the co-founder, guitarist, secondary vocalist, and co-principal songwriter of the Rolling Stones. Rolling Stone magazine called Richards the creator of "rock's greatest single body of riffs" on guitar and ranked him fourth on its list of 100 best guitarists in 2011. The magazine lists fourteen songs that Richards wrote with the Rolling Stones' lead vocalist Mick Jagger on its "Rolling Stone's 500 Greatest Songs of All Time" list.</p>
 
         </div>
     </body>
