--- a/index.html
+++ b/index.html
@@ -9,13 +9,25 @@
             <img src="https://cdn.britannica.com/41/197341-050-4859B808/The-Rolling-Stones-Bill-Wyman-Keith-Richards-1964.jpg" alt="" width="50%">
         <p>The Rolling Stones are an English rock band formed in London in 1962. Diverging from the popular pop rock of the early-1960s, the Rolling Stones pioneered the gritty, heavier-driven sound that came to define hard rock.
             Their first stable line-up was vocalist Mick Jagger, multi-instrumentalist Brian Jones, guitarist Keith Richards, drummer Charlie Watts, and bassist Bill Wyman. Initially the band performed mostly covers of American blues and R&B songs, and during their formative years Brian Jones was the primary leader: he put the band together, named it, and drove the sound and look of the band. After Andrew Loog Oldham became the group's manager in 1963, he encouraged them to write their own songs. Jagger and Richards became the primary creative force behind the band, alienating Jones, who developed a drug addiction that interfered with his ability to meaningfully contribute. He left the band shortly before his death in 1969, having been replaced by guitarist Mick Taylor, who in turn left in 1974 to be replaced by Ronnie Wood. Since Wyman's departure in 1993, Darryl Jones has served as bassist</p>
-            <h2>Band Members</h2>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Mick_Jagger_Deauville_2014.jpg/220px-Mick_Jagger_Deauville_2014.jpg">
+             <h2>Band Members</h2>
+             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Mick_Jagger_Deauville_2014.jpg/220px-Mick_Jagger_Deauville_2014.jpg">
             <h4>Mick jagger</h4>
             <p>Sir Michael Philip Jagger (born 26 July 1943) is an English singer, songwriter, actor, and film producer who has gained worldwide fame as the lead singer and one of the founder members of the Rolling Stones. Jagger's career has spanned over six decades, and he has been described as "one of the most popular and influential frontmen in the history of rock & roll". His distinctive voice and energetic live performances, along with Keith Richards' guitar style, have been the trademark of the Rolling Stones throughout the band's career. Jagger gained press notoriety for his romantic involvements and was often portrayed as a countercultural figure.</p>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Keith_Richards_Photo_Jerzy_Bednarski.jpg/220px-Keith_Richards_Photo_Jerzy_Bednarski.jpg"
             <h4>Keith Richards</h4>
             <p>Keith Richards (born 18 December 1943),[1] often referred to during the 1960s and 1970s as Keith Richard, is an English musician, singer, and songwriter. He is best known as the co-founder, guitarist, secondary vocalist, and co-principal songwriter of the Rolling Stones. Rolling Stone magazine called Richards the creator of "rock's greatest single body of riffs" on guitar and ranked him fourth on its list of 100 best guitarists in 2011. The magazine lists fourteen songs that Richards wrote with the Rolling Stones' lead vocalist Mick Jagger on its "Rolling Stone's 500 Greatest Songs of All Time" list.</p>
+           
+             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Charlie_Watts_Berlinale_2008.jpg/220px-Charlie_Watts_Berlinale_2008.jpg"
+             <h4>Charlie Watts</h4>
+            <p>Charles Robert Watts (born 2 June 1941) is an English drummer, best known as a member of the Rolling Stones since 1963. Originally trained as a graphic artist, he started playing drums in London's rhythm and blues clubs, where he met Brian Jones, Mick Jagger, and Keith Richards. In January 1963, he joined their fledgling group, the Rolling Stones, as drummer, while doubling as designer of their record sleeves and tour stages. Watts has been the only Rolling Stones member other than Jagger or Richards to have been featured on all of their studio albums. He cites jazz as a major influence on his drumming style. He has toured with his own group, the Charlie Watts Quintet, and appeared in London at Ronnie Scott's Jazz Club with the Charlie Watts Tentet.</p> 
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Ron_wood.jpg/220px-Ron_wood.jpg"
+              <h4>Ronnie Wood</h4>
+              <p>Ronald David Wood (born 1 June 1947)[1] is an English rock musician, songwriter, multi-instrumentalist, artist, author and radio personality best known as a member of the Rolling Stones since 1975, as well as a member of Faces and the Jeff Beck Group.
+
+                Wood began his career in 1964, when he joined the Birds (not to be confused with the American band the Byrds) on guitar.[2] He then joined the mod group the Creation, but remained with the group only for a short time and appeared on only a few of their singles. He joined the Jeff Beck Group in 1967 as a bass player. Their two albums, Truth and Beck-Ola, are both highly praised.</p>
+            
+
+
 
         </div>
     </body>
