add my favorite songs

--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
                    <l1>Sway</l1>
                    <l1>Beast burden</l1>
                 </ol>
+                <h6>My Favorite Albums</h6>
+                <ol>
+                    <l2>Beggars Banquet (1968)</l2>
+                     <l2>Let It Bleed (1969)</l2>
+                     <l2>Sticky Fingers (1971)</l2>
+                     <l2> Exile on Main St. (1972)</l2>
+                     <l2> Goats Head Soup (1973)</l2>
+I                    <l2>t's Only Rock 'n Roll (1974)</l2>
+                     <l2> Black and Blue (1976)</l2>
+                     <l2> Some Girls (1978)</l2>
+                     <l2> Emotional Rescue </l2>
+                </ol>
 
                     
                     
