--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
                  <p>After Andrew Loog Oldham became the group's manager in 1963, he encouraged them to write their own songs.</p> 
                  <p>Jagger and Richards became the primary creative force behind the band, alienating Jones, who developed a drug addiction that interfered with his ability to meaningfully contribute.</p> 
                  <p>He left the band shortly before his death in 1969, having been replaced by guitarist Mick Taylor, who in turn left in 1974 to be replaced by Ronnie Wood.</p>
-                 <p>Since Wyman's departure in 1993, Darryl Jones has served as bassist</p>
+                 <p>Since Wyman's departure in 1993, Darryl Jones has served as bassist.</p>
+                 <p>Its my favorite band because it has c00l music worth listenig too and are also enojyable.</p>
         </div>
                  <strong><h2>Band Members</h2></strong>
              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Mick_Jagger_Deauville_2014.jpg/220px-Mick_Jagger_Deauville_2014.jpg">
@@ -38,7 +39,7 @@
                 <p>My favorite songs from the band include:</p>
                 <div class="songs-1">
                   <ol>
-                   <li>wild horse</li> 
+                   <li> <a href="https://www.allmusic.com/song/paint-it-black-mt0010717040">Paint it black</li>
                    <li>Miss you</li>
                     <li>Some girls</li>
                    <li> Brown sugar</li>
