--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@
       <div>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Mick_Jagger_Deauville_2014.jpg/220px-Mick_Jagger_Deauville_2014.jpg">
         <h4>Mick jagger</h4>
-        <p>Sir Michael Philip Jagger (born 26 July 1943) is an English singer, songwriter, actor, and film producer who has gained worldwide fame as the lead singer and one of the founder members of the Rolling Stones. Jagger's career has spanned over six decades, and he has been described as "one of the most popular and influential frontmen in the history of rock & roll". His distinctive voice and energetic live performances, along with Keith Richards' guitar style, have been the trademark of the Rolling Stones throughout the band's career. Jagger gained press notoriety for his romantic involvements and was often portrayed as a countercultural figure.</p>        
-      </div>
+        <p>Sir Michael Philip Jagger (born 26 July 1943) is an English singer, songwriter, actor, and film producer who has gained worldwide fame as the lead singer and one of the founder members of the Rolling Stones. Jagger's career has spanned over six decades, and he has been described as "one of the most popular and influential frontmen in the history of rock & roll". His distinctive voice and energetic live performances, along with Keith Richards' guitar style, have been the trademark of the Rolling Stones throughout the band's career. Jagger gained press notoriety for his romantic involvements and was often portrayed as a countercultural figure.</p>
+      </div>    
       <div>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Charlie_Watts_Berlinale_2008.jpg/220px-Charlie_Watts_Berlinale_2008.jpg">
+        <img src=https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Keith_Richards_Photo_Jerzy_Bednarski.jpg/220px-Keith_Richards_Photo_Jerzy_Bednarski.jpg
+        <h4>keith richads</h4>
+        <p>Keith Richards (born 18 December 1943),[1] often referred to during the 1960s and 1970s as Keith Richard, is an English musician, singer, and songwriter. He is best known as the co-founder, guitarist, secondary vocalist, and co-principal songwriter of the Rolling Stones. Rolling Stone magazine called Richards the creator of "rock's greatest single body of riffs" on guitar and ranked him fourth on its list of 100 best guitarists in 2011. The magazine lists fourteen songs that Richards wrote with the Rolling Stones' lead vocalist Mick Jagger on its "Rolling Stone's 500 Greatest Songs of All Time</p>
+      </div>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Charlie_Watts_Berlinale_2008.jpg/220px-Charlie_Watts_Berlinale_2008.jpg">
         <h4>Charlie Watts</h4>
         <p>Charles Robert Watts (born 2 June 1941) is an English drummer, best known as a member of the Rolling Stones since 1963. Originally trained as a graphic artist, he started playing drums in London's rhythm and blues clubs, where he met Brian Jones, Mick Jagger, and Keith Richards. In January 1963, he joined their fledgling group, the Rolling Stones, as drummer, while doubling as designer of their record sleeves and tour stages. Watts has been the only Rolling Stones member other than Jagger or Richards to have been featured on all of their studio albums. He cites jazz as a major influence on his drumming style. He has toured with his own group, the Charlie Watts Quintet, and appeared in London at Ronnie Scott's Jazz Club with the Charlie Watts Tentet.</p>         
       </div>
-      <div>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Ron_wood.jpg/220px-Ron_wood.jpg">
         <h4>Ronnie Wood</h4>
         <p>Ronald David Wood (born 1 June 1947)[1] is an English rock musician, songwriter, multi-instrumentalist, artist, author and radio personality best known as a member of the Rolling Stones since 1975, as well as a member of Faces and the Jeff Beck Group.
@@ -40,18 +43,17 @@
       <div class="songs-1">
         <ol>
           <li> <a href="https://www.allmusic.com/song/paint-it-black-mt0010717040">Paint it black</a></li>
-            <li>Miss you</li>
-            <li>Some girls</li>
-            <li> Brown sugar</li>
-            <li>dear doctor</li>
-            <li>Prodigal song</li>
-            <li>Stray cats bullets</li>
-            <li>Satisfaction</li>
-            <li>Sway</li>
-            <li>Beast burden</li>
-            <li>You cant Always get</li>
-            <li>Under my thumb</li>
-            <li>!the</li>
+          <li> <a href="https://www.youtube.com/watch?v=hic-dnps6MU">Miss you</a></li>
+          <li> <a href="https://www.youtube.com/watch?v=MYLD4Fh_9vI">Brown sugar</a></li>
+          <li> <a href="https://www.deezer.com/us/track/133104926?autoplay=true">dear doctor</a></li>
+          <li> <a href="https://www.deezer.com/us/track/133104926?autoplay=true">prodigal son</a></li>
+          <li> <a href="https://www.deezer.com/us/track/5968645?autoplay=true">tumbling dice</a></li>
+          <li> <a href="https://www.deezer.com/us/track/2677024?autoplay=true">midnight rambler</a></li>
+          <li> <a href="https://www.deezer.com/us/track/100357034?autoplay=true">dead flowers</a></li>
+          <li> <a href="https://www.deezer.com/us/track/7818900?autoplay=true">paint it black</a></li>
+          <li> <a href="https://www.deezer.com/us/track/9914842?autoplay=true">you cant always get what you want</a></li>
+          <li> <a href="https://www.youtube.com/watch?v=gEj3jvAcjCw">all down the line</a></li>
+          <li> <a href="https://en.wikipedia.org/wiki/Connection_(Rolling_Stones_song)">connection</a></li>
         </ol>
       </div>
       <div class="songs-2">
